src/objects/Glxy_LeaseProjects__c.object
<CustomObject>
    <customHelpPage>GLXY_HelpPage</customHelpPage>
    <description>This table contains information on all the New, Renewal, Extension, Succeeding, Superseding, Terminating, Chg in SF, and New/Replacing leases associated with a Project.  The Project is the starting point for new leases or changes to existing leases.</description>
    <fields>
        <fullName>APR_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APR IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APR_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APR NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AUG_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AUG IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AUG_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AUG NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acceptance620Date__c</fullName>
        <inlineHelpText>Date contracting officer approves lease action</inlineHelpText>
        <label>Date 620</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccrualAmountCurrentFY__c</fullName>
        <formula>If(
    (AccrualEndDate__c &gt; AccrualStartDateCY__c &amp;&amp;  Text(eEorA__c)  == &apos;Estimate&apos; &amp;&amp;
         EffectiveDate__c &lt;= Today ()),
    ( 
      (
        ((EscalationAnnualRent__c + CancellationAnnualRent__c + ExpansionAnnualRent__c)/12) 
        * 
        ((12 * (YEAR(AccrualEndDate__c) - YEAR(AccrualStartDateCY__c))) +
          (MONTH(AccrualEndDate__c) - MONTH(AccrualStartDateCY__c)) + 1)
      )
      +
      (
         If(((YEAR(TODAY()+ 92) - Value(EffectiveDateFY__c)) == 0),
            ( 
               (DAY(DATE(YEAR(EffectiveDate__c), MONTH(EffectiveDate__c), 1))
                   - Day(EffectiveDate__c)) 
               * 
               AccrualAmountEffectiveMonthRate__c  
            ),
            0
         )
      )
    ),
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Impact on the current year budget - this will have a non zero value if the project is past due with effective in current fiscal year project.</inlineHelpText>
        <label>Current FY Calculated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccrualAmountEffectiveMonthRate__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Accrual Amount Effective Month Rate</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccrualAmountPriorFY__c</fullName>
        <formula>If( (Value(EffectiveDateFY__c) &lt; YEAR(TODAY()+ 92)),
     
     If( ((YEAR(TODAY()+ 92) - Value(EffectiveDateFY__c)) == 1),
         (
            (  ((12 * (YEAR(DATE(YEAR(EffectiveDate__c + 92),09,30)) - YEAR(EffectiveDate__c))) +
               (MONTH(DATE(YEAR(EffectiveDate__c + 92),09,30))- MONTH(EffectiveDate__c)) + 1) 
                * 
               ((EscalationAnnualRent__c + CancellationAnnualRent__c + ExpansionAnnualRent__c)/12) 
            )
            +
            (
                (DAY(DATE(YEAR(EffectiveDate__c), MONTH(EffectiveDate__c), 1))
                       - Day(EffectiveDate__c)) 
                * 
                AccrualAmountEffectiveMonthRate__c   
            )
         ),
         (EscalationAnnualRent__c + CancellationAnnualRent__c + ExpansionAnnualRent__c)
     ),

    0
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total retroactive amount - this will have a non zero value only if the project has effective date in prior fiscal year.</inlineHelpText>
        <label>Prior FY Calculated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccrualAmt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Accrual Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccrualEndDate__c</fullName>
        <formula>If( 
 (If(IsNull(Acceptance620Date__c), TODAY(), Acceptance620Date__c) &gt; EffectiveDate__c), 
 If(IsNull(Acceptance620Date__c), TODAY(), Acceptance620Date__c), 
 EffectiveDate__c 
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccrualNumber__c</fullName>
        <label>Accrual Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccrualStartDateCY__c</fullName>
        <formula>If(EffectiveDateFY__c==Text(YEAR(TODAY()+ 92)),EffectiveDate__c,DATE((YEAR(TODAY())-1),10,01))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrual Start Date CY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccrualType__c</fullName>
        <label>Accrual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnnualRent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Annual Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Antennas__c</fullName>
        <label>New Antennas</label>
        <summarizedField>Glxy_ProjectAgency__c.NewAntennas__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectAgency__c.ProjectNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AssociatedLeasesCount__c</fullName>
        <description>We found that Sales Force does a so called “silent delete” on a junction object when one of the parent is deleted. In other words, the trigger is not executed. To circumvent this issue, we have to create a rollup summary on the Project object, and make sure to validate for any associated leases on this project before a delete.</description>
        <label>Associated Leases Count</label>
        <summaryForeignKey>Glxy_AssociatedLeases__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AssociatedLeases_lkup__c</fullName>
        <description>Since SF cannot handle multiple child objects, this field is designed to aggregate all the Associated Leases that are tied to this project. This field is updated via a trigger on the Associated Lease object. This field is used across all the Reports.</description>
        <label>Associated Leases (Expiration Date)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardDate__c</fullName>
        <label>Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BA53RealtyAnalyst__c</fullName>
        <label>BA53 Budget Analyst</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BDGFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include In Budget Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BaseStructParkSpaces__c</fullName>
        <label>New Base Structured Parking Spaces</label>
        <summarizedField>Glxy_ProjectAgency__c.BaseStructuredParkingSpaces__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectAgency__c.ProjectNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BaseSurfParkSpaces__c</fullName>
        <label>New Base Surface Parking Spaces</label>
        <summarizedField>Glxy_ProjectAgency__c.BaseSurfaceParkingSpace__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectAgency__c.ProjectNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Exclusion_Reason__c</fullName>
        <label>Budget Exclusion Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CY_Obligation_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Year Obligation IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CY_Obligation_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Year Obligation  NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalculateAccruals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate Accruals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalculatedOldIASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>System calculated value for the Old IA SQ Ft.</inlineHelpText>
        <label>Calculated Old IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalculatedOldNOASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>System calculated value for the Old NOA SQ Ft.</inlineHelpText>
        <label>Calculated Old NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CancelARentIA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancellation Annual Rent IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelARentNOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancellation Annual Rent NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelPYCostIA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancellation Part Year Cost IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelPYCostNOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancellation Part Year Cost NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelSqFtIA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancellation Sq Ft IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CancelSqFtNOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancellation Sq Ft NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CancellationAnnualRent__c</fullName>
        <formula>CancelARentIA__c  +  CancelARentNOA__c</formula>
        <label>Cancellation Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancellationPartYearCost__c</fullName>
        <formula>CancelPYCostIA__c  +  CancelPYCostNOA__c</formula>
        <label>Cancellation Part Year Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancellationSqFt__c</fullName>
        <formula>CancelSqFtIA__c  +  CancelSqFtNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChangeinIASQFt__c</fullName>
        <formula>IASquareFeet__c - OldIASqFt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change in IA Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChangeinNOASQFt__c</fullName>
        <formula>NOASquareFeet__c - OldNOASqFt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change in NOA Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckCOApproval__c</fullName>
        <formula>If
(     
    (
       (
            TEXT(ProjectStatus__c) = &apos;Completed&apos; &amp;&amp; 
            !(ISBLANK(Acceptance620Date__c)) &amp;&amp;
            Acceptance620Date__c &lt; DATE( 
                                  IF(MONTH(TODAY()) &lt;= 9, (YEAR(TODAY()) -1 ),(YEAR(TODAY()))), 10, 1
                                         )
         )
     )
     ,true,false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check CO Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DEC_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DEC IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DEC_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DEC NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DelegatedProject__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This designation is determined as &apos;yes&apos;  if authority has been delegated to a client agency.</inlineHelpText>
        <label>Delegated Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DelegatedReturn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This designation is determined by Leasing for budget call purposes. Identifies a project is a result of a prior delegation that is now being returned to the GSA inventory.</inlineHelpText>
        <label>Delegated Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_Project_Rep_lkp__c</fullName>
        <formula>IF( DelegatedProject__c =true, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegated Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoubleRent__c</fullName>
        <label>Double Rent</label>
        <summarizedField>Glxy_AssociatedLeases__c.Double_Rent__c</summarizedField>
        <summaryForeignKey>Glxy_AssociatedLeases__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EffectiveDateFY__c</fullName>
        <formula>Text(YEAR( EffectiveDate__c + 92 ))</formula>
        <label>Effective Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDateMonth__c</fullName>
        <formula>Text(MONTH(EffectiveDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EscalARentIA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Escalation Annual Rent IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalARentNOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Escalation Annual Rent NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalPYCostIA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Escalation Part Year Cost IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalPYCostNOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Escalation Part Year Cost NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalSqFtIA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Escalation Sq Ft IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscalSqFtNOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Escalation Sq Ft NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscalationAnnualRent__c</fullName>
        <formula>EscalARentIA__c  +  EscalARentNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalationPartYearCost__c</fullName>
        <formula>EscalPYCostIA__c  +  EscalPYCostNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Part Year Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalationSqFt__c</fullName>
        <formula>EscalSqFtIA__c  +  EscalSqFtNOA__c</formula>
        <label>Escalation Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpanARentIA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expansion Annual Rent IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpanARentNOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expansion Annual Rent NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpanPYCostIA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expansion Part Year Cost IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpanPYCostNOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expansion Part Year Cost NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpanPYCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expansion Part Year Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpanSqFtIA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expansion Sq Ft IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpanSqFtNOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expansion Sq Ft NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpansionAnnualRent__c</fullName>
        <formula>ExpanARentIA__c + ExpanARentNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expansion Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpansionSqFt__c</fullName>
        <formula>ExpanSqFtIA__c + ExpanSqFtNOA__c</formula>
        <label>Expansion Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FEB_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FEB IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FEB_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FEB NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinalCertificationDate__c</fullName>
        <inlineHelpText>Date project receives final certification by BA53 analyst</inlineHelpText>
        <label>Final Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinanceProcessedDate__c</fullName>
        <label>Finance Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IAConversionDate__c</fullName>
        <inlineHelpText>Date IA RSF will convert to NOA RSF</inlineHelpText>
        <label>IA/NOA Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IAConverstionFY__c</fullName>
        <formula>IF( 
ISBLANK(IAConversionDate__c), 
&quot;2099&quot;, 
Text(YEAR(IAConversionDate__c  + 92))
)</formula>
        <label>IAConverstionFY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IASquareFeet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsEffectiveAndProcessedDateFYMatch__c</fullName>
        <formula>IF(Text(YEAR(EffectiveDate__c + 92 ))==Text(YEAR(ProcessedDate__c+ 92 )), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsEffectiveAndProcessedDateFYMatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsUserRegionMatch__c</fullName>
        <formula>IF(OR(TEXT(RegionCd__c)==$User.Glxy_Region_Code__c,$User.Glxy_Region_Code__c==&quot;CO&quot;), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsUserRegionMatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAN_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JAN IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JAN_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JAN NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUL_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUL IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUL_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUL NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUN_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUN IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUN_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUN NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LandOnly__c</fullName>
        <formula>If(
    (
       BaseStructParkSpaces__c == 0 &amp;&amp;
       BaseSurfParkSpaces__c == 0 &amp;&amp;  
       NOASquareFeet__c == 0 &amp;&amp;
       IASquareFeet__c == 0 &amp;&amp;
       SquareFeet__c == 0 &amp;&amp; 
       Antennas__c == 0 &amp;&amp;
       OBaseStructParkSpaces__c == 0 &amp;&amp; 
       OBaseSurfParkSpaces__c == 0 &amp;&amp;
       OldNOASqFt__c == 0 &amp;&amp;    
       OldIASqFt__c == 0 &amp;&amp;    
       OAntennas__c == 0 &amp;&amp; 
       Old_Square_Feet__c == 0
    ),
True,
False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Land Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land__c</fullName>
        <label>New Land</label>
        <summarizedField>Glxy_ProjectAgency__c.NewLand__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectAgency__c.ProjectNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MAR_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAR IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAR_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAR NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAY_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAY IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAY_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAY NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOAOrIA__c</fullName>
        <formula>If(ParkingOnly__c != &apos;Yes&apos;, (If 
 ((NOASquareFeet__c &gt; 0  &amp;&amp; IASquareFeet__c &gt; 0), 
   &quot;BOTH&quot;, 
   (
     If (NOASquareFeet__c &gt; 0, 
       &quot;NOA&quot;, 
       If (IASquareFeet__c &gt; 0, &quot;IA&quot;, &quot;&quot;)
      )
   )
 )), IF(AND((OBaseStructParkSpaces__c + OBaseSurfParkSpaces__c) ==0,(BaseStructParkSpaces__c + BaseSurfParkSpaces__c)&gt;(OBaseStructParkSpaces__c + OBaseSurfParkSpaces__c)), &quot;IA&quot;, 
     IF(AND((OBaseStructParkSpaces__c + OBaseSurfParkSpaces__c) &lt;&gt; 0,(BaseStructParkSpaces__c + BaseSurfParkSpaces__c)&gt;(OBaseStructParkSpaces__c + OBaseSurfParkSpaces__c)), &quot;BOTH&quot;,
	 IF((BaseStructParkSpaces__c + BaseSurfParkSpaces__c)&lt;(OBaseStructParkSpaces__c + OBaseSurfParkSpaces__c),&quot;NOA&quot;,&quot;&quot;))))</formula>
        <label>NOA or IA*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOASquareFeet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOA_or_IA__c</fullName>
        <label>NOA or IA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NOA</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NOV_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOV IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOV_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOV NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetChangeInAnnualRent__c</fullName>
        <formula>AnnualRent__c -  Old_Annual_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Change In Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetChngInSqFt__c</fullName>
        <formula>SquareFeet__c  -  Old_Square_Feet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Change In Square Feet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewLease__c</fullName>
        <inlineHelpText>New lease numbers to be assigned by REXUS for Succeeding, Superseding, and New/Replacing actions.  For Extensions, Renewal, Expansion, Reduction, and Other actions, this field will reflect existing lease number (Old Lease Number).</inlineHelpText>
        <label>New Lease Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewRate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Rate</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewStructuredParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Structured Parking Spaces</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewSurfaceParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Surface Parking Spaces</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoBA53Impact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Galaxy Release 1.1</description>
        <label>No BA53 Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofAssociatedAgencies__c</fullName>
        <description>Galaxy Release 1.1 - Used by Exception Report - Project with no Associated Agency</description>
        <label>Number of Associated Agencies</label>
        <summaryForeignKey>Glxy_ProjectAgency__c.ProjectNumber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OAntennas__c</fullName>
        <label>Old Antennas</label>
        <summarizedField>Glxy_ProjectAgency__c.OldAntennasRollUp__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectAgency__c.ProjectNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OBaseStructParkSpaces__c</fullName>
        <label>Old Base Structured Parking Spaces</label>
        <summarizedField>Glxy_ProjectAgency__c.OldBaseStructuredParkingSpacesRollup__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectAgency__c.ProjectNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OBaseSurfParkSpaces__c</fullName>
        <label>Old Base Surface Parking Spaces</label>
        <summarizedField>Glxy_ProjectAgency__c.OldBaseSurfaceParkingSpacesRollUp__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectAgency__c.ProjectNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCT_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OCT IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCT_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OCT NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OLand__c</fullName>
        <label>Old Land</label>
        <summarizedField>Glxy_ProjectAgency__c.OldLandRollUp__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectAgency__c.ProjectNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OldAnnualRent__c</fullName>
        <label>Old Annual Rent</label>
        <summarizedField>Glxy_AssociatedLeases__c.Lease_Annual_Rent__c</summarizedField>
        <summaryForeignKey>Glxy_AssociatedLeases__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OldIASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldNOASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldRate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old Rate</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Annual_Rent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Square_Feet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>